--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
 
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -15,92 +19,248 @@
   </style>
 </head>
 <body>
-  Features
-  Team
-  Sign In
 
-  All your files in one secure location, accessible anywhere.
+  <!-- HEADER includes menu -->
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+  <header>
+    <div class="container">
+      <nav id="header-nav">
+        <a class="fylo-logo" href="#">
+          <img src="images/logo.svg" alt="Fylo's logo">
+        </a>
 
-  Get Started
+        <!-- FYLO MENU -->
 
-  Access your files, anywhere
+        <ul class="nav-menu">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#fylo-description">Team</a></li>
+          <li><a href="#email-sign-up">Sign In</a></li>
+        </ul>
+      </nav>
+    </div>
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
+    <!-- FYLO INTRO -->
 
-  Security you can trust
+    <div class="header-intro">
+      <img src="images/illustration-intro.png" alt="intro image showing an all files illustration for Fylo">
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p>Fylo stores all your most important files in one secure location. Access them wherever 
+      you need, share and collaborate with friends, family, and co-workers.</p>
+      <a href="#email-sign-up-form">
+        <button class="button">Get Started</button>
+      </a>
+    </div>
 
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
+  </header>
 
-  Real-time collaboration
+  <!-- MAIN CONTENT -->
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
+  <main>
+    <section id="features">
+      <div class="container">
+        <div class="features-container">
+          <div id="file-access-feature">
+            <img class="feature-icon" src="images/icon-access-anywhere.svg" alt="icon for access anywhere feature">
+            <h3> Access your files, anywhere</h3>
+            <p>The ability to use a smartphone, tablet, or computer to access your account means your 
+            files follow you everywhere.</p>
+          </div>
 
-  Store any type of file
+          <div id="security-feature">
+            <img class="feature-icon" src="images/icon-security.svg" alt="icon for security feature">
+            <h3>Security you can trust</h3>
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
+            <p>2-factor authentication and user-controlled encryption are just a couple of the security 
+            features we allow to help secure your files.</p>
+          </div>
 
-  Stay productive, wherever you are
+          <div id="collab-feature">
+            <img class="feature-icon" src="images/icon-collaboration.svg" alt="icon for collaboration feature">
+            <h3>Real-time collaboration</h3>
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
+            <p>Securely share files and folders with friends, family and colleagues for live collaboration. 
+            No email attachments required.</p>
+          </div>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
+          <div id="any-file-feature">
+            <img class="feature-icon" src="images/icon-any-file.svg" alt="icon for any file type feature">
+            <h3>Store any type of file</h3>
 
-  See how Fylo works
+            <p> Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+            file types to be securely stored and shared.</p>
+          </div>
+        </div>
+      </div>
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+    </section>
 
-  Satish Patel
-  Founder & CEO, Huddle
+    <!-- FYLO DESCRIPTION SECTION -->
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+    <section id="fylo-description">
 
-  Bruce McKenzie
-  Founder & CEO, Huddle
+      <div class="container">
+        <div class="description-container">
+          <img class="description-image" src="images/illustration-stay-productive.png" alt="stay productive illustration for Fylo description">
+          <div class="description-content">
+            <h2>Stay productive, wherever you are</h2>
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+            <p class="fylo-description-text">Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
 
-  Iva Boyd
-  Founder & CEO, Huddle
+            <p class="fylo-description-text">Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
 
-  Get early access today
+            <a class="links-feedback" href="">
+              <span>See how Fylo works</span>
+              <img class="arrow-forward" src="images/icon-arrow.svg" alt="forward arrow icon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
+    <!-- FYLO TESTIMONIALS SECTION -->
 
-  Get Started For Free
+    <section id="fylo-testimonials">
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
+      <div class="container">
+        <div class="testimonial-container">
+          <img class="quotes" src="images/bg-quotes.png" alt="quotes image for Fylo testimonials section">
 
-  +1-543-123-4567
-  example@fylo.com
+          <div class="testimonial-card">
+            <p class="testimonial-message">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
 
-  About Us
-  Jobs
-  Press
-  Blog
+            <div class="testimonial-author">
+              <img src="images/profile-1.jpg" alt="First author picture">
+              <div class="author-desc">
+                <span class="testimonial-author-name">Satish Patel</span>
+                <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+              </div>
+            </div>
+          </div>
 
-  Contact Us
-  Terms
-  Privacy
+          <div class="testimonial-card">
+            <p class="testimonial-message">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
+
+            <div class="testimonial-author">
+              <img src="images/profile-2.jpg" alt="Second author picture">
+              <div class="author-desc">
+                <span class="testimonial-author-name">Bruce McKenzie</span>
+                <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="testimonial-card">
+            <p class="testimonial-message">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+            become a well-oiled collaboration machine.</p>
+
+            <div class="testimonial-author">
+              <img src="images/profile-3.jpg" alt="Third author picture">
+              <div class="author-desc">
+                <span class="testimonial-author-name">Iva Boyd</span>
+                <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- FYLO EMAIL SIGN UP SECTION -->
+
+    <section id="email-sign-up">
+      <div class="container">
+        <div class="email-sign-up-box">
+          <h3 class="email-sign-up-heading">Get early access today</h3>
+
+          <p class="email-sign-up-message">It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+          questions, our support team would be happy to help you.</p>
+
+          <form id="email-sign-up-form">
+            <input type="email" name="email" placeholder="email@example.com">
+            <input class="button" type="submit" name="submit-button" value="Get Started For Free">
+          </form>  
+        </div>    
+
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
 
   <footer>
+    <div class="main-footer">
+      <div class="container">
+        <a class="fylo-logo" href="#">
+          <img src="images/logo.svg" alt="Fylo's logo">
+        </a>
+        <div class="footer-content">
+          <div class="fylo-location">
+            <img src="images/icon-location.svg" alt="location icon">
+            <div class="fylo-location-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+              dolore magna aliqua</p>
+            </div>
+          </div>
+          <div class="fylo-contact">
+            <span>
+              <img src="images/icon-phone.svg" alt="phone icon">
+              +1-543-123-4567
+            </span>
+            <span>
+              <img src="images/icon-email.svg" alt="email icon">
+              example@fylo.com
+            </span>
+          </div>
+
+          <div class="footer-nav">
+            <ul>
+             <a href="#"><li>About Us</li></a>
+             <a href="#"><li>Jobs</li></a>
+             <a href="#"><li>Press</li></a>
+             <a href="#"><li>Blog</li></a>
+           </ul>
+
+           <ul>
+             <a href="#"><li>Contact Us</li></a>
+             <a href="#"><li>Terms</li></a>
+             <a href="#"><li>Privacy</li></a>
+           </ul>
+         </div>
+
+         <div class="footer-socials">
+           <ul>
+             <li>
+              <a href="#">
+                <span class="fab fa-facebook-f"></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="fab fa-twitter"></span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="fab fa-instagram"></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="frontendmentor-footer">
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p></div>
   </footer>
 </body>
 </html>
