--- a/index.html
+++ b/index.html
@@ -198,69 +198,68 @@
           <img src="images/logo.svg" alt="Fylo's logo">
         </a>
         <div class="footer-content">
+
           <div class="fylo-location">
             <img src="images/icon-location.svg" alt="location icon">
-            <div class="fylo-location-text">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-              dolore magna aliqua</p>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua</p>
+
           </div>
           <div class="fylo-contact">
-            <span>
+            <span class="contact-group">
               <img src="images/icon-phone.svg" alt="phone icon">
-              +1-543-123-4567
-            </span>
-            <span>
+            +1-543-123-4567</span>
+            <span class="contact-group">
               <img src="images/icon-email.svg" alt="email icon">
-              example@fylo.com
-            </span>
-          </div>
-
-          <div class="footer-nav">
-            <ul>
-             <a href="#"><li>About Us</li></a>
-             <a href="#"><li>Jobs</li></a>
-             <a href="#"><li>Press</li></a>
-             <a href="#"><li>Blog</li></a>
-           </ul>
-
-           <ul>
-             <a href="#"><li>Contact Us</li></a>
-             <a href="#"><li>Terms</li></a>
-             <a href="#"><li>Privacy</li></a>
-           </ul>
-         </div>
-
-         <div class="footer-socials">
-           <ul>
-             <li>
-              <a href="#">
-                <span class="fab fa-facebook-f"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fab fa-twitter"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fab fa-instagram"></span>
-              </a>
-            </li>
-          </ul>
+            example@fylo.com</span>
+          </span>
         </div>
 
+        <div class="footer-nav">
+          <ul>
+           <a href="#"><li>About Us</li></a>
+           <a href="#"><li>Jobs</li></a>
+           <a href="#"><li>Press</li></a>
+           <a href="#"><li>Blog</li></a>
+         </ul>
+
+         <ul>
+           <a href="#"><li>Contact Us</li></a>
+           <a href="#"><li>Terms</li></a>
+           <a href="#"><li>Privacy</li></a>
+         </ul>
+       </div>
+
+       <div class="footer-socials">
+         <ul>
+           <li>
+            <a href="#">
+              <span class="fab fa-facebook-f"></span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="fab fa-twitter"></span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="fab fa-instagram"></span>
+            </a>
+          </li>
+        </ul>
       </div>
 
     </div>
-  </div>
 
-  <div class="frontendmentor-footer">
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p></div>
-  </footer>
+  </div>
+</div>
+
+<div class="frontendmentor-footer">
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </p></div>
+</footer>
 </body>
 </html>
