--- a/index.html
+++ b/index.html
@@ -121,18 +121,21 @@
         <section id="fylo-testimonials">
 
           <div class="container">
+            <img class="quotes" src="images/bg-quotes.png" alt="quotes image for Fylo testimonials section">
+
             <div class="testimonial-container">
-              <img class="quotes" src="images/bg-quotes.png" alt="quotes image for Fylo testimonials section">
 
               <div class="testimonial-card">
                 <p class="testimonial-message">Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
                 become a well-oiled collaboration machine.</p>
 
                 <div class="testimonial-author">
-                  <img src="images/profile-1.jpg" alt="First author picture">
+                  <div class="author-image">
+                    <img src="images/profile-1.jpg" alt="First author picture">
+                  </div>
                   <div class="author-desc">
-                    <span class="testimonial-author-name">Satish Patel</span>
-                    <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+                    <div class="testimonial-author-name">Satish Patel</div>
+                    <div class="testimonial-author-title">Founder & CEO, Huddle</div>
                   </div>
                 </div>
               </div>
@@ -142,10 +145,12 @@
                 become a well-oiled collaboration machine.</p>
 
                 <div class="testimonial-author">
-                  <img src="images/profile-2.jpg" alt="Second author picture">
+                  <div class="author-image">
+                    <img src="images/profile-2.jpg" alt="Second author picture">
+                  </div>
                   <div class="author-desc">
-                    <span class="testimonial-author-name">Bruce McKenzie</span>
-                    <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+                    <div class="testimonial-author-name">Bruce McKenzie</div>
+                    <div class="testimonial-author-title">Founder & CEO, Huddle</div>
                   </div>
                 </div>
               </div>
@@ -155,10 +160,12 @@
                 become a well-oiled collaboration machine.</p>
 
                 <div class="testimonial-author">
-                  <img src="images/profile-3.jpg" alt="Third author picture">
+                  <div class="author-image">
+                    <img src="images/profile-3.jpg" alt="Third author picture">
+                  </div>
                   <div class="author-desc">
-                    <span class="testimonial-author-name">Iva Boyd</span>
-                    <span class="testimonial-author-title">Founder & CEO, Huddle</span>
+                    <div class="testimonial-author-name">Iva Boyd</div>
+                    <div class="testimonial-author-title">Founder & CEO, Huddle</div>
                   </div>
                 </div>
               </div>
@@ -200,68 +207,81 @@
           <div class="footer-content">
 
             <div class="fylo-location">
-              <img src="images/icon-location.svg" alt="location icon">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-              dolore magna aliqua</p>
+              <div id="location-icon">
+                <img src="images/icon-location.svg" alt="location icon">
+              </div>
+              <div id="location-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua</p>
+              </div>
 
             </div>
             <div class="fylo-contact">
-              <span class="contact-group">
-                <img src="images/icon-phone.svg" alt="phone icon">
-              +1-543-123-4567</span>
-              <span class="contact-group">
-                <img src="images/icon-email.svg" alt="email icon">
-              example@fylo.com</span>
-            </span>
+              <div class="contact-group">
+                <div id="ct-grp-1-img">
+                  <img src="images/icon-phone.svg" alt="phone icon">
+                </div>
+                <div id="ct-grp-1-text">
+                  <span>+1-543-123-4567</span>
+                </div>
+              </div>
+              <div class="contact-group">
+                <div id="ct-grp-2-img">
+                  <img src="images/icon-email.svg" alt="email icon">
+                </div>
+                <div id="ct-grp-2-text">
+                  <span>example@fylo.com</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-nav fylo-ft-nav">
+              <ul>
+               <li><a href="#">About Us</a></li>
+               <li><a href="#">Jobs</a></li>
+               <li><a href="#">Press</a></li>
+               <li><a href="#">Blog</a></li>
+             </ul>
+
+             <ul>
+               <li><a href="#">Contact Us</a></li>
+               <li><a href="#">Terms</a></li>
+               <li><a href="#">Privacy</a></li>
+             </ul>
+           </div>
+
+           <div class="footer-socials fylo-ft-socials">
+             <ul>
+               <li>
+                <a href="#">
+                  <span class="fab fa-facebook-f"></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="fab fa-twitter"></span>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="fab fa-instagram"></span>
+                </a>
+              </li>
+            </ul>
           </div>
 
-          <div class="footer-nav">
-            <ul>
-             <a href="#"><li>About Us</li></a>
-             <a href="#"><li>Jobs</li></a>
-             <a href="#"><li>Press</li></a>
-             <a href="#"><li>Blog</li></a>
-           </ul>
-
-           <ul>
-             <a href="#"><li>Contact Us</li></a>
-             <a href="#"><li>Terms</li></a>
-             <a href="#"><li>Privacy</li></a>
-           </ul>
-         </div>
-
-         <div class="footer-socials">
-           <ul>
-             <li>
-              <a href="#">
-                <span class="fab fa-facebook-f"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fab fa-twitter"></span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fab fa-instagram"></span>
-              </a>
-            </li>
-          </ul>
         </div>
 
       </div>
-
     </div>
-  </div>
-  
-  <div class="frontendmentor-footer">
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>. 
-      Coded by <a href="https://github.com/marrockx" target="_blank">devmariam</a>.
-    </p>
-  </div>
-</footer>
+
+    <div class="frontendmentor-footer">
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/marrockx" target="_blank">devmariam</a>.
+      </p>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
